# hackerrank-solutions-explained

./: .gitignore  .pylintrc  LICENSE.txt  README.rst  pyproject.toml
src/Arrays/: 2D Array - DS.py  Array Manipulation.py  Arrays: Left Rotation.py  Minimum Swaps 2.py  New Year Chaos.py
src/Dictionaries and Hashmaps/: Count Triplets.py  Frequency Queries.py  Hash Tables: Ransom Note.py  Sherlock and Anagrams.py  Two Strings.py
src/Greedy Algorithms/: Greedy Florist.py  Luck Balance.py  Max Min.py  Minimum Absolute Difference in an Array.py
src/Sorting/: Fradulent Activity Notifications.py  Mark and Toys.py  Merge Sort: Counting Inversions.py  Sorting: Bubble Sort.py  Sorting: Comparator.py
src/String Manipulation/: Alternating Characters.py  Common Child.py  Sherlock and the Valid String.py  Special String Again.py  Strings: Making Anagrams.py
src/Warm-up Challenges/: Counting Valleys.py  Jumping on the Clouds.py  Repeated String.py  Sales by Match.py
