[tool.poetry]
name = "hackerrank-solutions-explained"
version = "0.1.0"
description = ""
authors = ["Igor Grigorev <barsic1080@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
